--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -33,7 +33,7 @@ jobs:
   test:
     strategy:
       matrix:
-        platform: [ubuntu-20.04]
+        platform: [ubuntu-20.04, macos-latest, windows-latest]
         go-version: [1.14.x]
     runs-on: ${{ matrix.platform }}
     name: integration tests
