--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -53,8 +53,8 @@ jobs:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
 
-      # - name: Run tests
-      #   run: ./make.bash test-integration
+      - name: Run tests
+        run: ./make.bash test-integration
       - name: test
         run: go test -v ./...
 
