--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -9,7 +9,7 @@ jobs:
   #   strategy:
   #     matrix:
   #       platform: [ubuntu-20.04]
-  #       go-version: [1.14.x]
+  #       go-version: [1.14.x, 1.16.x]
   #   runs-on: ${{ matrix.platform }}
   #   name: Linters (Static Analysis) for Go
   #   env:
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-20.04, macos-latest, windows-latest]
-        go-version: [1.14.x]
+        go-version: [1.14.x, 1.16.x]
     runs-on: ${{ matrix.platform }}
     name: integration tests
     env:
