--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-20.04, macos-latest, windows-latest]
-        go-version: [1.14.x, 1.16.x]
+        go-version: [1.16.x]
     runs-on: ${{ matrix.platform }}
     name: integration tests
     env:
